<resources>
    <string name="app_name">NetMetrics</string>
    <string name="progress_dialog">Pinging Website</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="done">Done!</string>
    <string name="save">Save</string>
    <string name="ping">Start</string>
    <string name="just_ping">Just ping!</string>
    <string name="html_ping">Download HTML!</string>
    <string name="default_values">Default</string>
    <string name="hint_max_tries">Times to ping!</string>
    <string name="hint_url">URL to ping!</string>
    <string name="hint_wait">Milliseconds between pings!</string>
    <string name="usage_nominal">Nominal usage: %1$s</string>
    <string name="usage_received">Received usage: %1$s</string>
    <string name="usage_sent">Sent usage: %1$s</string>
    <string name="usage_total">Total usage: %1$s</string>
    <string name="connection_type">Connection type: %1$s</string>
    <string name="signal_strength">Signal in dBm: %1$s</string>
    <string name="time_total">Time elapsed: %1$s</string>
    <string name="battery_mah">Battery used: %1$s</string>
    <string name="type">Type of usage: %1$s</string>
    <string name="mode">Mode of iPerf: %1$s</string>
    <string name="lost_packets">Lost datagrams: %1$s</string>
    <string name="jitter">Jitter: %1$s</string>
    <string name="bandwidth">Average Bandwidth: %1$sbits/sec</string>
    <string name="progress_dialog_saving_data">Saving data&#8230;</string>
    <string name="metrics">Show me the metrics!</string>
    <string name="devad_label">Label!</string>
    <string name="devad_desc">Desc!</string>
    <string name="app_ids">PID: %1$d\nUID: %2$d</string>
    <string name="op_ping">Ping</string>
    <string name="op_html">HTML</string>
    <string name="op_iperf">iPerf</string>
    <string name="iperf_url">Server IP</string>
    <string name="iperf_bandwidth">Bandwidth (in Bytes{k|M})</string>
    <string name="iperf_time">Time</string>
    <string name="iperf_array">Buffer length in Bytes</string>
    <string name="iperf_mode">TCP</string>
    <string name="iperf_mode_udp">UDP</string>
    <string name="iperf_command">iperf -c %1$s -b %2$s -t %3$s -l %4$s %5$s</string>
    <string name="stats_file">/sdcard/stats.txt</string>

    <string name="save_type">Type of usage</string>
    <string name="save_iperf">Mode of iPerf</string>
    <string name="save_bandwidth">Average bandwidth</string>
    <string name="save_datagrams">Lost datagrams</string>
    <string name="save_jitter">Jitter</string>
</resources>
