<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/iperf_url" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/et_band"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/iperf_bandwidth" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/iperf_time" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/et_array"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/iperf_array" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_UDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/iperf_mode" />
    </LinearLayout>
</layout>