<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/et_tries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_max_tries" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_url" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/et_wait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_wait" />
    </LinearLayout>
</layout>