<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="gr.hobbyte.netmetrics.ping.PingActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

        <co.ceryle.radiorealbutton.library.RadioRealButtonGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rrbg_bottomLineSize="0dp"
            app:rrbg_dividerColor="@color/radio_dividers"
            app:rrbg_dividerSize="0dp"
            app:rrbg_selectorColor="@color/red_middle"
            app:rrbg_selectorSize="5dp"
            app:rrbg_animateTextsScale="0.6"
            app:rrbg_radius="10dp"
            app:rrbg_shadow="true"
            app:rrbg_animateTexts_enter="overshoot">
            <co.ceryle.radiorealbutton.library.RadioRealButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_backgroundColor="@color/radio_bg"
                app:rrb_ripple="true"
                app:rrb_rippleColor="@color/colorText"
                app:rrb_text="@string/op_ping"
                app:rrb_textColor="@color/black"/>
            <co.ceryle.radiorealbutton.library.RadioRealButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_backgroundColor="@color/radio_bg"
                app:rrb_ripple="true"
                app:rrb_rippleColor="@color/colorText"
                app:rrb_text="@string/op_html"
                app:rrb_textColor="@color/black"/>
            <co.ceryle.radiorealbutton.library.RadioRealButton
                android:id="@+id/radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_backgroundColor="@color/radio_bg"
                app:rrb_ripple="true"
                app:rrb_rippleColor="@color/colorText"
                app:rrb_text="@string/op_iperf"
                app:rrb_textColor="@color/black"/>
        </co.ceryle.radiorealbutton.library.RadioRealButtonGroup>

        <FrameLayout
            android:id="@+id/FragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_default"
                android:text="@string/default_values"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"/>

            <Button
                android:id="@+id/button_ping"
                android:text="@string/ping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</layout>