<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="gr.hobbyte.netmetrics.MainActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Battery Used"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/battery_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Battery Used"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Device ID"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/deviceid_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Device ID"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Device Brand"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/device_brand_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Device Brand"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Device Model"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/model_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Device Model"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Android Version"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/version_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Android Version"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Connection Type"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>



                    <EditText
                        android:id="@+id/connection_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Connection Type"
                        android:layout_weight="1"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Data Used"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/data_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Data Used"
                        android:layout_weight="1"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Time"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/time_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Time"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Signal Strength"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/signal_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Signal Strength"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Time Between Pings"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/timePings_manual_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="Time Between Pings"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/save_bandwidth"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/bandwidth"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/save_bandwidth"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/save_type"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/type"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/save_type"
                        android:layout_weight="1"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/save_iperf"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/iperf_mode"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/save_iperf"
                        android:layout_weight="1"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/save_datagrams"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/datagrams"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/save_datagrams"
                        android:layout_weight="1"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/save_jitter"
                        android:textSize="20sp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/jitter"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/save_jitter"
                        android:layout_weight="1"
                        android:inputType="number"/>
                </LinearLayout>

                <Button
                    android:text="@string/save"
                    android:id="@+id/button_save_manual"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"/>
        
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>